1998-12-05  Andrew T. Veliath  <andrewtv@usa.net>

	* IDL.h, parser.y, lexer.l, util.c, tstidl.c: Turn interface
	properties into extended node properties for XPIDL (for any node).
	IDL_interface_get_property -=> IDL_property_get. Add
	IDL_property_set, IDL_property_remove.  Add a potential property
	list between the parameter attribute and the type.  Allow
	underscores in property keys.

1998-12-04  Andrew T. Veliath  <andrewtv@usa.net>

	* IDL.h (IDL_NODE_IS_TYPE): Add macro.

	* lexer.l, IDL.h, util.c: Add IDL_CODEFRAG type, for XPIDL.

	* parser.y, IDL.h, util.c: Integrate XPIDL varargs support into
	parameter_dcls, and remove (now unneeded) VARARGS node type.

1998-12-03  Andrew T. Veliath  <andrewtv@usa.net>

	* parser.y: Add IDL_inhibit_push, IDL_inhibit_pop,
	IDL_inhibit_get, IDL_file_set and IDL_file_get wrapper functions.

1998-12-01  Andrew T. Veliath  <andrewtv@usa.net>

	* parser.y, lexer.l, util.c, IDL.h: Allow boolean XPIDL
	properties, which are inserted with an empty string.  Add
	recognition of "noscript" keyword when XPIDL syntax is enabled.
	Add syntactical recognition for "native mytype (PRThread *)" in
	XPIDL mode (i.e., where `PRThread *' can be anything).

1998-11-30  Andrew T. Veliath  <andrewtv@usa.net>

	* Interface infotag list turned into a case-insensitive property
	hash table with improved parsing.  If an IID is provided in the
	property list, IDL_interface_get_property (interface, "IID")
	should provide the IID, for instance (without the parens).
	Properties can be any identifier (value) item, separated by commas
	inside square brackets.

	* Add per-filename state information.

	* #pragma inhibit push/pop added.  The push operation will
	increment a counter, while the pop operation decrements it.  If
	the counter is greater than zero, any module or interface declared
	during that time will be inhibited.

	* Made XPIDL interface properties a list, and moved before the
	interface keyword.
	
	* Internal flag state added.
